# crosshairpp

./: .clangd  .gitignore  CMakeLists.txt  README.md
.github/workflows/: any-multibuild.yml  debug-multibuild.yml  pr-multibuild.yml  qt-util.yml  release-multibuild.yml  staging-multibuild.yml
resources/: AppRun  LICENSE.rtf  crosshairpp.desktop  installer.wxs  preset.ui  resource.rc.in  resources.qrc  win.rc
resources/appimage/: crosshairpp.desktop
resources/msi/: .~lock.LICENSE.rtf#  LICENSE.rtf  installer.wxs
src/: ccode.cpp  ccode.h  config.cpp  config.h  crosshair.cpp  crosshair.h  main.cpp  mainwindow.cpp  mainwindow.h  render.cpp  render.h  util.cpp  util.h
